--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   api:
     build: .
     container_name: conduit-api
-    command: uvicorn conduit.app:app --host 0.0.0.0 --port 8080
+    command: uvicorn conduit.app:app --host 0.0.0.0 --port 8080 --reload
     environment:
       POSTGRES_HOST: postgres
     env_file:
@@ -12,7 +12,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - .:/conduit
+      - .:/app
   postgres:
     image: postgres:16
     # conatainer_name: conduit_postgres
